--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,21 @@ body{
     margin: 0;
     padding: 0;
 }
+
+#cabecera{
+    background-color: teal;
+    color: white;
+    box-shadow: 0px 5px 20px 0px black;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline{
+    margin:  0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container{
     width: 70%;
     padding: 1em;
