cambio de fuente

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
     color: blueviolet;
     font-size:16px;
     margin: 0;
